--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -4,9 +4,53 @@
     justify-content: center;
 }
 
+.about::before{
+    position: absolute;
+    content: '';
+    background-color: rgba(225, 224, 224, 0.867);
+    width: 85%;
+    height: 90%;
+    z-index: -1;
+    border-radius: 25px;
+    margin-top: 30px;
+}
+
 .about__leftSection, .about__rightSection{
     width: 38%;
-    margin-top: 100px;
+    margin-top: 150px;
+
+}
+
+
+.about__rightSection{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+.about__rightSection-para{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 75%;
+    padding: 15px;
+    border-radius: 15px;
+    background-color: rgb(87, 87, 252);
+    color: white;
+}
+
+.about__rightSection-para h3{
+    line-height: 25px ;
+
+    margin-bottom: 10px;
+    color: white;
+}
+
+.about__rightSection-para p{
+    width: 80%;
+    font-size: 14px;
+    line-height: 20px ;
+    padding-bottom: 5px;
+
 }
 
 .about__leftSection h1{
