--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .services__title{
@@ -12,9 +13,9 @@
 .services__paraWrapper{
     display: flex;
     justify-content: space-between;
-    column-gap: 50px;
+    column-gap: 40px;
     margin-top: 75px;
-    width: 80%;
+    width: 75%;
 }
 .services__para{
     display: flex;
@@ -41,4 +42,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #5c8afd;
+}
+
+
+.services__background{
+    width: 85%;
+    height: 90%;
+    position: absolute;
+    background-color:rgba(225, 224, 224, 0.867);
+    z-index: -1;
+    border-radius: 15px;
+    margin-top: 30px;
+
 }
