--- a/src/components/testimonials/Testimonials.css
+++ b/src/components/testimonials/Testimonials.css
@@ -6,6 +6,19 @@
     position: relative;
 }
 
+
+.testimonials::before{
+    position: absolute;
+    content: '';
+    background-color: rgba(225, 224, 224, 0.867);
+    width: 85%;
+    height: 95%;
+    z-index: -1;
+    border-radius: 25px;
+    margin-top: 30px;
+}
+
+
 .testimonials__title{
     margin-top: 50px;
     margin-bottom: 50px;
@@ -28,6 +41,17 @@
     top: 50%;
     right: 150px;
 }
+.testimonials__circleWrapper{
+    margin-top: 30px;    
+    display: flex;
+}
+
+.testimonials__circle, .testimonials__circleDot{
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+}
+
 
 .testimonials__cardWrapper{
     width: 500px;
