--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -34,15 +34,15 @@
     width: 75%;
     padding: 15px;
     border-radius: 15px;
-    background-color: rgb(87, 87, 252);
-    color: white;
+    background-color: #5c8afd;
+    color: black;
 }
 
 .about__rightSection-para h3{
     line-height: 25px ;
 
     margin-bottom: 10px;
-    color: white;
+    color: black;
 }
 
 .about__rightSection-para p{
