--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -2,6 +2,8 @@
     min-height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
+    column-gap: 20px;
 }
 
 .about::before{
@@ -9,7 +11,7 @@
     content: '';
     background-color: rgba(225, 224, 224, 0.867);
     width: 85%;
-    height: 90%;
+    height: 95%;
     z-index: -1;
     border-radius: 25px;
     margin-top: 30px;
@@ -17,7 +19,6 @@
 
 .about__leftSection, .about__rightSection{
     width: 38%;
-    margin-top: 150px;
 
 }
 
@@ -25,17 +26,18 @@
 .about__rightSection{
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 20px;
 }
 .about__rightSection-para{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 75%;
+    max-width: 400px;
     padding: 15px;
     border-radius: 15px;
     background-color: #5c8afd;
     color: black;
+
 }
 
 .about__rightSection-para h3{
@@ -46,20 +48,114 @@
 }
 
 .about__rightSection-para p{
-    width: 80%;
+    max-width: 500px;
     font-size: 14px;
     line-height: 20px ;
-    padding-bottom: 5px;
+    padding-bottom: 5px;    
 
 }
 
 .about__leftSection h1{
     line-height: 45px ;
     margin-bottom: 50px;
+    max-width: 400px;
 }
+
+.about__leftSection h2{
+  
+    max-width: 400px;
+}
+
 
 .about__leftSection p{
     line-height: 25px ;
+    margin-top: 25px;
     margin-bottom: 50px;
+    max-width: 400px;
 }
 
+@media (min-width:1650px){
+
+    .about__leftSection h1{
+        font-size: 3rem;
+        line-height: 45px ;
+       
+    }
+
+    .about__leftSection h2{
+        font-size: 2rem;
+        max-width: 400px;
+    }
+
+    .about__leftSection p{
+       font-size: 1.5rem;
+       line-height: 35px;
+    }
+
+
+    .about__rightSection-para h3{
+        line-height: 35px ;
+        font-size: 1.6rem;
+
+    }
+    .about__rightSection-para p{
+        line-height: 30px ;
+        font-size: 1.5rem;
+        padding: 10px;
+    
+        }
+
+}
+
+@media(max-width:650px){
+    .about{
+        height: 150vh;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+ 
+
+    .about__leftSection h1{
+        top: 10px;
+        font-size: 1.5rem;
+        line-height: 45px ;
+        margin-bottom: 20px;
+       
+    }
+
+    .about__leftSection h2{
+        font-size: 1.2rem;
+        max-width: 400px;
+    }
+
+    .about__leftSection p{
+       font-size: 1rem;
+       line-height: 25px;
+       margin-top: 15px;
+       margin-bottom: 15px;
+        }
+
+    .about__leftSection{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+
+    }
+
+     .about__rightSection{
+        width: 80%;
+        align-items: center;
+    
+    }
+
+    .about::before{
+        height: 130vh;
+    }
+
+   
+
+
+}
