--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,33 +2,35 @@
     display: flex;
     height: 115px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     box-shadow: 0 0 10px gray ;
 
     
     }
 .header__logoWrapper{
-    width: 38%;
+    width: 20%;
+    margin-left: 10%;
 }
 
 .header__logo{
-    font-size: 36px;
+    font-size: 2rem;
     color: #336BFA;
     font-weight: bold;
     height: 78px;
-    width: 209px;
+    max-width: 209px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #D9D9D9;
 
 }
 
 .header__navbar{    
-    width: 38%;
+    min-width: 38%;
     display: flex;
     justify-content: space-between;
     font-weight: 500;
+    margin-right: 10%;
+
 }
 
 .header__home, .header__about, .header__services{
@@ -52,3 +54,38 @@
 
 }
 
+.header__menu{
+    display: none;
+}
+
+@media (min-width:1650px){
+    .header__logo{
+        font-size: 3rem;
+    }
+    .header__navbar{
+        font-size: 1.3rem;
+    }
+
+    .header__contactButton{
+        width: 150px;
+        height: 60px;
+    }
+
+}
+
+@media (max-width:700px){
+    .header__navbar{
+        display: none;
+    }
+
+    .header__menu{
+        display: block;
+        height: 30px;
+        width: 30px;
+        margin-right: 60px;
+    }
+
+    .header__logo{
+        margin-left: 40px;
+    }
+}
