--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -3,14 +3,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: relative;
 }
 
-.services__title{
-    margin-top: 100px;
-}
 
-.services__paraWrapper{
+
+.services__paraWrapper{ 
     display: flex;
     justify-content: space-between;
     column-gap: 40px;
@@ -55,4 +54,44 @@
     border-radius: 15px;
     margin-top: 30px;
 
+}
+
+@media (min-width:1650px){
+
+    .services__title h1{
+        font-size: 3rem;
+    }
+
+    .services__para h3{
+        font-size: 1.6rem;
+    }
+
+    .services__para p{
+        font-size: 1.5rem;
+    }
+
+}
+
+@media (max-width:900px){
+
+
+    .services__title{
+        max-width: 400px;
+        margin-top: 30px;
+    }
+
+    .services__paraWrapper{
+        max-width: 500px;
+        flex-direction: column;
+        row-gap: 20px;
+        margin-top: 30px;
+    }
+
+
+
+    .services__background{
+        height: 102%;
+        position: absolute;
+       
+    }
 }
